--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,5 +5,7 @@
 		    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>{{ page.title }}</title>
         <link rel="stylesheet" href="{{ site.baseurl }}/stylesheets/stylesheet.css" >
+        <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
+        <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
     </head>
     <body>
