Add container divs to 'default' layout.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,3 +9,6 @@
         <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
     </head>
     <body>
+      <div id="container">
+        <div class="inner">
+      
