--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,15 @@
         <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
     </head>
     <body>
+      
+      <section id="downloads" class="clearfix">
+        <a href="{{ site.baseurl }}/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
+        <a href="{{ site.baseurl }}/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
+        <a href="{{ site.baseurl }}" id="view-on-github" class="button"><span>View on GitHub</span></a>
+      </section>
+      
       <div id="container">
         <div class="inner">
+          
+          
       
