Experiment with direct link to page source on GitHub.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,7 +11,7 @@
     <body>
       
       <section id="downloads" class="clearfix">
-        <a href="{{ site.baseurl }}/{{page.path}}" id="view-on-github" class="button"><span>View on GitHub</span></a>
+        <a href="https://github.com/ucberkeley/brc-draft-documentation/blob/gh-pages/{{page.url | replace:'.html','.md'}}" id="view-on-github" class="button"><span>View on GitHub</span></a>
       </section>
       
       <div id="container">
