--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/2000/REC-xhtml1-20000126/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+
     <head>
+      
 		    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        
+        <!-- Turn off caching when doing extensive editing -->
+        <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+        <meta http-equiv="Pragma" content="no-cache" />
+        <meta http-equiv="Expires" content="0" />
+        
         <title>{{ page.title }}</title>
+        
         <link rel="stylesheet" href="{{ site.baseurl }}/stylesheets/stylesheet.css" >
         <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
         <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+        
     </head>
+    
     <body>
       
       <section id="downloads" class="clearfix">
